2009-06-05  Rik  <rdrider0-list@yahoo.com>

	* variables.cc: Update documentation for 'who' family of functions

2009-06-03  Rik  <rdrider0-list@yahoo.com>

	* input.cc: Correct documentation for keyboard function

2009-06-02  Rob Mahurin  <rob@utk.edu>

	* Makefile.in: Add CARBON_LIBS to OCTINTERP_LINK_DEPS.
	From Bernard Desgraups <bdesgraupes@orange.fr>.
	
2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.cc (octave_base_value::numeric_assign): Gripe when no index
	given.
	* ov-cell.cc (octave_cell::subsasgn): Ditto.
	* ov-struct.cc (octave_struct::subsasgn): Ditto.
	* ov-list.cc (octave_list::subsasgn): Ditto.

2009-05-28  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::do_files): Avoid shadow warning from GCC.

2009-05-27  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__magick_read__.cc (write_image):
	Bail out if given indexed image.

2009-05-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (encode_map): Fix RGB color
	construction.

2009-05-26  John W. Eaton  <jwe@octave.org>

	* load-path.h, load-path.cc (load_path::files, load_path::do_files): 
	New arg, OMIT_EXTS.
	* help.cc (F__list_functions__): Call load_path::files with
	omit_exts set to true.

	* symtab.h
	(symbol_table::symbol_record::symbol_record_rep::is_variable):
	Use "! is_local ()" instead of storage_class != local.
	(symbol_table::do_variable_names): Only add variables to the list.
	(symbol_table::unmark_forced_variables): New static function
	* variables.cc (do_who): Use is_variable instead of is_defined.
	Also limit output to variables when using regexp pattern.
	* octave.cc (unmark_forced_vars): Delete.
	(execute_eval_option_code): Don't add unmark_forced_vars to 
	unwind_protect stack here.
	* toplev.cc (main_loop): Add symbol_table::unmark_forced_variables
	to the unwind_protect stack here.
	* input.cc (get_debug_input): Likewise.
	* parse.y (parse_fcn_file, eval_string): Likewise.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>
